name:                shorturls
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shorturls#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , scotty
                     , wai
                     , hedis
                     , random
                     , bytestring
                     , text
  default-language:    Haskell2010

executable shorturls-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shorturls
  default-language:    Haskell2010

test-suite shorturls-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shorturls
                     , hspec
                     , hspec-wai
                     , http-types
                     , hedis
                     , wai-extra
                     , bytestring
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shorturls
